--- a/vakcinisani/templates/lista.html
+++ b/vakcinisani/templates/lista.html
@@ -9,7 +9,12 @@
   <br>
   <ul class="list-group" id="moja_lista" name="lista">
     {% for i in kreirani %}
-    <li class="list-group-item">{{i.ime}} {{i.prezime}} ------ <span class="vakcina_oboji">{{i.vakcina}}</span></li>
+
+
+    <li class="list-group-item">{{i.ime}} {{i.prezime}} ------{% if i.vakcina == "Sinofarm" %}
+                                                                <span class="vakcina_oboji sinofarm">{{i.vakcina}}</span>
+                                                              {% else %}<span class="vakcina_oboji">{{i.vakcina}}</span>
+                                                              {% endif %}</li>
     {% endfor %}
   </ul>
 </div>
@@ -38,7 +43,7 @@
     // zato smo dodali spanovima klasu(ne mora jedinstvena da bude. vidi gore u htmlu).
     //Koristimo funkciju document.getElementsByClassName("vakcina_oboji") koja vrati listu spanova koji imaju klasu vakcina_oboji
     //Zatim prodjemo for petlljom kroz svaki element i poredimo da li je vrednost Astra Zeneka. Ako jeste, dodamo color red.
-    // eto ga 
+    // eto ga
     var astra = document.getElementsByClassName("vakcina_oboji");
     console.log('lista elemenata sa klasom vakcina_oboji', astra);
     for (var i = 0; i < astra.length; i++) {
@@ -47,7 +52,10 @@
       if (astra_vrednost == 'Astra Zeneka'){
         astra[i].style.color="red";
       }
+      else if (astra_vrednost == 'Fajzer') {
+        astra[i].style.color="green";
+      }
     }
- 
+
 </script>
 {% endblock %}
