--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,3 +5,16 @@ body{
   color:yellow;
   font-weight:bold;
 }
+#link:hover{
+  font-weight:bold;
+  color:#eb4034;
+}
+#dugme_za_drugu_stranu:hover{
+  background-color: #4885cf;
+}
+
+#absolute {
+    position: absolute;
+    left: 0 ; right: 0; bottom: 0;
+    height:[footer-height]
+}
