--- a/vakcinisani/templates/base.html
+++ b/vakcinisani/templates/base.html
@@ -6,6 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
+
      <title>Vakcinisani</title>
   </head>
   <body>
@@ -26,10 +27,18 @@
 
         {% block content %}
         {% endblock %}
+        <br>
+
+        {% block footer %}
+        <footer>
+          <div id="absolute" class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2021 Copyright: Vaccine</div>
+        </footer>
+        {% endblock %}
 
         {% block scripts %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
         {% endblock %}
   </body>
+
 </html>
