--- a/vakcinisani/templates/novi_pacijent.html
+++ b/vakcinisani/templates/novi_pacijent.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <br>
-
+  <h3>Popunite formu i stisnite dugme "Dodaj"</h3> <hr>
   <form class="row row-cols-lg-auto g-3 align-items-center" action="" method="POST">
     {% csrf_token %}
     <ul class="list-group">
