--- a/vakcinisani/templates/base.html
+++ b/vakcinisani/templates/base.html
@@ -6,13 +6,15 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
 
      <title>Vakcinisani</title>
   </head>
   <body>
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand">Vakcinisani protiv Covid-19</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Vakcinisani protiv Covid-19</a>
       </div>
     </nav>
 
