--- a/vakcinisani/templates/edit.html
+++ b/vakcinisani/templates/edit.html
@@ -12,10 +12,32 @@
       <li class="list-group-item">Vrsta vackcine: {{form.vakcina}}</li>
       <li class="list-group-item">Da li ste alergicni?(Cekirajte polje ako jeste) {{form.alergija}}</li>
     </ul>
-    <input type="submit" name="Sacuvaj" value="Sacuvaj">
+    <input id="dugme_disabled" type="submit" name="Sacuvaj" value="Sacuvaj">
     <a class="btn btn-secondary btn-sm ms-1" href="{% url 'lista' %}">Cancel</a>
     </form>
 
 </div>
+{% endblock %}
 
+{% block scripts %}
+
+  <script type="text/javascript">
+    console.log('ucitana funkcija');
+    var cekirano_polje = document.getElementById('id_alergija');
+    //funkcija za dugme = disabled ukoliko je korisnik alekrgican
+    function disabled(){
+      var cekirano_polje = document.getElementById('id_alergija');
+      dugme_koje_ce_biti_disabled = document.getElementById('dugme_disabled')
+      if (cekirano_polje.checked){
+        console.log('cekirano');
+        dugme_disabled.setAttribute("disabled", true);
+      }
+      else{
+        dugme_disabled.removeAttribute('disabled');
+      }
+    }
+    cekirano_polje = addEventListener('click', disabled);
+
+
+  </script>
 {% endblock %}
