clean_data on field JMBG

--- a/vakcinisani/templates/edit.html
+++ b/vakcinisani/templates/edit.html
@@ -6,6 +6,7 @@
   <form class="row row-cols-lg-auto g-3 align-items-center" action="" method="POST">
     {% csrf_token %}
     <ul class="list-group">
+      <span class="alert alert-danger">{{form.jmbg.errors}}</span>
       <li class="list-group-item">Ime: {{form.ime}}</li>
       <li class="list-group-item">Prezime: {{form.prezime}}</li>
       <li class="list-group-item">Maticni broj: {{form.jmbg}}</li>
@@ -15,6 +16,7 @@
     <input id="dugme_disabled" type="submit" name="Sacuvaj" value="Sacuvaj">
     <a class="btn btn-secondary btn-sm ms-1" href="{% url 'lista' %}">Cancel</a>
     </form>
+
 
 </div>
 {% endblock %}
