--- a/vakcinisani/templates/novi_pacijent.html
+++ b/vakcinisani/templates/novi_pacijent.html
@@ -28,11 +28,12 @@
           </div>
 
           <div class="mb-3">
+
+            <label for="{{ form.jmbg.id_for_label }}" class="form-label">Maticni broj: </label>
+            {{ form.jmbg }}
             {% if form.jmbg.errors %}
               <div class="alert alert-danger">{{form.jmbg.errors}}</div>
             {% endif %}
-            <label for="{{ form.jmbg.id_for_label }}" class="form-label">Maticni broj: </label>
-            {{ form.jmbg }}
           </div>
 
           <div class="mb-3">
@@ -89,11 +90,10 @@
     </div>
 
   </div>
-
+</div>
   <br>
-
-
 {% endblock %}
+
 {% block scripts %}
 {{block.super}}
 <script type="text/javascript">
