--- a/vakcinisani/templates/vakcinisan.html
+++ b/vakcinisani/templates/vakcinisan.html
@@ -16,3 +16,10 @@
 </div>
 
 {% endblock %}
+
+{% block footer %}
+<footer>
+  <div id="absolute" class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  © 2021 Copyright: Vaccine</div>
+</footer>
+{% endblock %}
