--- a/vakcinisani/templates/lista.html
+++ b/vakcinisani/templates/lista.html
@@ -22,7 +22,7 @@
 
   <ul class="list-group" id="moja_lista" name="lista">
     {% for i in kreirani %}
-    <li class="list-group-item"><span id="za_tippy-{{i.id}}"class="za_tippy">{{i.ime}} {{i.prezime}}</span> <i class="fas fa-long-arrow-alt-right"></i>
+    <li class="list-group-item"><span style='display:none' id="za_tippy-{{i.id}}">{{i.ime}} <br> {{i.prezime}} <br> {{i.vakcina}} <br> {{i.jmbg}} </span>{{i.ime}} {{i.prezime}} <i class="fas fa-long-arrow-alt-right"></i>
        <span class="vakcina_oboji {% if i.vakcina == 'Sinofarm' %} sinofarm {% endif %} ">{{i.vakcina}}</span>
        <a class="btn btn-warning float-end btn-sm ms-1 btn-tippy-2" data-template="za_tippy-{{i.id}}" href="{% url 'edit' i.id %}">Uredi</a>
        <a class="btn btn-primary float-end btn-sm btn-tippy" data-template="za_tippy-{{i.id}}" href="{% url 'vakcinisan' i.id %}">Detalji</a>
