--- a/vakcinisani/templates/obavesti_korisnika.html
+++ b/vakcinisani/templates/obavesti_korisnika.html
@@ -5,15 +5,25 @@
 <br>
 <h2 class="ms-3"> Obavesti korisnika</h2><hr>
 <div class="container">
-
+  {% if message_name %}
+    <center><h2>Hvala {{message_name}}</h2></center>
+  {% endif %}
   <div class="row">
     <div class="col-4">
       <form method="POST" class="form-control">
         {% csrf_token %}
         {{ form.non_field_errors }}
         <div class="mb-3">
+          <label for="{{ form.ime.id_for_label }}" class="form-label">Vase Ime: </label>
+          {{ form.ime }}
+        </div>
+        <div class="mb-3">
           <label for="{{ form.email.id_for_label }}" class="form-label">Email: </label>
           {{ form.mail }}
+        </div>
+        <div class="mb-3">
+          <label for="{{ form.poruka.id_for_label }}" class="form-label">Poruka: </label>
+          {{ form.poruka }}
         </div>
         <div class="mb-3">
           <label for="{{ form.datum.id_for_label }}" class="form-label">Datum: </label>
@@ -28,11 +38,12 @@
 
   </div>
 </div>
+</div>
 {% endblock %}
 
 {% block footer %}
 <footer>
-  <div id="absolute" class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
   © 2021 Copyright: Vaccine</div>
 </footer>
 {% endblock %}
