--- a/vakcinisani/templates/obavesti_korisnika.html
+++ b/vakcinisani/templates/obavesti_korisnika.html
@@ -29,10 +29,10 @@
           <label for="{{ form.datum.id_for_label }}" class="form-label">Datum: </label>
           {{ form.datum }}
         </div>
-        <div class="mb-3">
+        <!-- <div class="mb-3">
           <label for="{{ form.vreme.id_for_label }}" class="form-label">Vreme: </label>
           {{ form.vreme }}
-        </div>
+        </div> -->
         <input type="submit" value="Posalji" class="btn btn-primary form-control">
     </form>
 
@@ -40,6 +40,8 @@
 </div>
 </div>
 {% endblock %}
+
+
 
 {% block footer %}
 <footer>
